# kurs02

./: CMakeLists.txt  README.md  kurs.cpp  kurs.h  kurstest.cpp  test.txt  test2.txt
UI/: kursUI.cpp  kursUI.h  kursUIForm.fbp
